# football_bnn

./: .gitignore  README.md  bnn.py  modelling.ipynb  pyproject.toml
